tls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: nginx-tls
    cert-manager.io/cluster-issuer: nginx-tls
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - nginxrit.eastus2.cloudapp.azure.com
      secretName: nginx-tls
  rules:
    - host: nginxrit.eastus2.cloudapp.azure.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
